--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,15 @@
 {
   "name": "fleet-copilot-server",
+  "private": true,
   "type": "module",
+  "engines": { "node": ">=20 <21" },
   "scripts": {
-    "dev": "node index.js",
-    "seed": "node seed.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "neo4j-driver": "^5.22.0"
+    "cors": "^2.8.5",
+    "neo4j-driver": "^5.25.0",
+    "node-fetch": "^3.3.2"
   }
 }
