--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "express": "^4.19.2",
     "cors": "^2.8.5",
     "neo4j-driver": "^5.25.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.4.5"
   }
 }
