--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "1.7.2",
     "next": "^14.2.5",
-    "next-auth": "4.24.7",
+    "next-auth": "^4.24.7",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,5 +22,3 @@
     "typescript": "5.9.2"
   }
 }
-
-
