Changes to fix issues with search locally and then looking to fix it on vercel and render

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@ AUTH0_CLIENT_ID=YDooqg51p0uFdfZNX7ZOpcA10cwHhmbg
 AUTH0_CLIENT_SECRET=-fL4Az-2i4sJ59MPq0-kV3X2xqH0bO4B6AHhr-tF4NqY4vZvFYqh-RNvXJUHxilf
 AUTH0_ISSUER=https://dev-q672f7bt4iwhkxe3.us.auth0.com
 BACKEND_BASE_URL=http://localhost:4000
-
+PORT=4000
+ALLOWED_ORIGINS=http://localhost:3000
 # Backend (server/.env)
 NEO4J_URI=neo4j+s://429ed5ee.databases.neo4j.io
 NEO4J_USER=neo4j
